[gd_scene load_steps=2 format=3 uid="uid://cmbkbn43btk4h"]

[ext_resource type="Script" path="res://resource/class_card.gd" id="1_wpgy1"]

[node name="ClassCardScene" type="Control" node_paths=PackedStringArray("classNameLabel", "classIdLabel", "classDescriptionLabel", "classSkillBoxContainer", "classAnim")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wpgy1")
classNameLabel = NodePath("Panel/ClassName")
classIdLabel = NodePath("Panel/ClassID")
classDescriptionLabel = NodePath("Panel/ClassDescription")
classSkillBoxContainer = NodePath("Panel/VBoxContainer")
classAnim = NodePath("Panel/ClassAnim")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 500.0

[node name="ClassName" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 23.0
offset_right = 45.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Class Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassAnim" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(150, 156)

[node name="ClassID" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="ClassDescription" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -4.0
offset_right = 149.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "An intelligence focused job. Mage uses magic to damage enemies or support allies."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="BoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -118.0
offset_right = 79.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="ChooseClassButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -41.0
offset_right = 33.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Choose"

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="pressed" from="Panel/ChooseClassButton" to="." method="_on_choose_class_button_pressed"]
